# rust-boiler-plate

./: Cargo.toml  README.md  makefile
rust/server/: Cargo.toml  README.md  docker-compose.yml  makefile
rust/server/docker/: dockerfile.dev
rust/server/src/: lib.rs  main.rs
rust/server/src/scenario/: mod.rs
src/: main.rs  routes.rs
src/scenario/: health_check_scenario.rs
