[package]
name = "runacy-note-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "runacy_note_backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
